[gd_scene load_steps=2 format=2]

[ext_resource path="res://1.Model/SpaceBody.gd" type="Script" id=1]

[node name="Area2D" type="Area2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="InputArea2D" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea2D"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="InputArea2D" to="." method="_on_InputArea2D_input_event"]
